# rust-python-interoperability

./: .gitignore  .wr.toml  Cargo.toml  README.md  pyproject.toml
.github/workflows/: site.yml
book/: book.toml
book/src/: SUMMARY.md
book/src/01_intro/: 00_welcome.md  01_setup.md  02_modules.md  03_functions.md  04_arguments.md  05_gil.md  06_output.md  07_exceptions.md  08_outro.md
book/src/02_classes/: 00_pyclass.md  01_constructors.md  02_methods.md  03_setters.md  04_static_methods.md  05_inheritance.md  06_parent.md  07_outro.md
book/src/03_concurrency/: 00_concurrency.md  00_introduction.md  01_python_threads.md  02_gil.md  03_releasing_the_gil.md  04_minimize_gil_locking.md  05_immutable_types.md  06_outro.md
book/src/03_multithreading/: 00_introduction.md  01_python_threads.md
exercises/01_intro/00_welcome/: .wr.toml  Cargo.toml
exercises/01_intro/00_welcome/src/: lib.rs
exercises/01_intro/01_setup/: Cargo.toml  pyproject.toml
exercises/01_intro/01_setup/extension/: Cargo.toml  pyproject.toml
exercises/01_intro/01_setup/sample/: README.md  pyproject.toml
exercises/01_intro/01_setup/src/: lib.rs
exercises/01_intro/02_modules/: Cargo.toml  pyproject.toml
exercises/01_intro/02_modules/sample/: pyproject.toml
exercises/01_intro/02_modules/src/: lib.rs
exercises/01_intro/03_functions/: Cargo.toml  pyproject.toml
exercises/01_intro/03_functions/sample/: pyproject.toml
exercises/01_intro/03_functions/sample/tests/: test_sample.py
exercises/01_intro/03_functions/src/: lib.rs
exercises/01_intro/04_arguments/: Cargo.toml  pyproject.toml
exercises/01_intro/04_arguments/sample/: pyproject.toml
exercises/01_intro/04_arguments/src/: lib.rs
exercises/01_intro/05_gil/: Cargo.toml  pyproject.toml
exercises/01_intro/05_gil/sample/: pyproject.toml
exercises/01_intro/05_gil/src/: lib.rs
exercises/01_intro/06_output/: Cargo.toml  pyproject.toml
exercises/01_intro/06_output/sample/: pyproject.toml
exercises/01_intro/06_output/src/: lib.rs
exercises/01_intro/07_exceptions/: Cargo.toml  pyproject.toml
exercises/01_intro/07_exceptions/sample/: pyproject.toml
exercises/01_intro/07_exceptions/src/: lib.rs
exercises/01_intro/08_outro/: Cargo.toml  pyproject.toml
exercises/01_intro/08_outro/sample/: pyproject.toml
exercises/01_intro/08_outro/src/: lib.rs
exercises/02_classes/00_pyclass/: Cargo.toml  pyproject.toml
exercises/02_classes/00_pyclass/sample/: pyproject.toml
exercises/02_classes/00_pyclass/src/: lib.rs
exercises/02_classes/01_constructors/: Cargo.toml  pyproject.toml
exercises/02_classes/01_constructors/sample/: pyproject.toml
exercises/02_classes/01_constructors/src/: lib.rs
exercises/02_classes/02_methods/: Cargo.toml  pyproject.toml
exercises/02_classes/02_methods/sample/: pyproject.toml
exercises/02_classes/02_methods/src/: lib.rs
exercises/02_classes/03_setters/: Cargo.toml  pyproject.toml
exercises/02_classes/03_setters/sample/: pyproject.toml
exercises/02_classes/03_setters/src/: lib.rs
exercises/02_classes/04_static_methods/: Cargo.toml  pyproject.toml
exercises/02_classes/04_static_methods/sample/: pyproject.toml
exercises/02_classes/04_static_methods/src/: lib.rs
exercises/02_classes/05_inheritance/: Cargo.toml  pyproject.toml
exercises/02_classes/05_inheritance/sample/: pyproject.toml
exercises/02_classes/05_inheritance/sample/tests/: test_sample.py
exercises/02_classes/05_inheritance/src/: lib.rs
exercises/02_classes/06_parent/: Cargo.toml  pyproject.toml
exercises/02_classes/06_parent/sample/: pyproject.toml
exercises/02_classes/06_parent/src/: lib.rs
exercises/02_classes/07_outro/: Cargo.toml  pyproject.toml
exercises/02_classes/07_outro/sample/: pyproject.toml
exercises/02_classes/07_outro/sample/tests/: test_sample.py
exercises/02_classes/07_outro/src/: lib.rs
exercises/03_concurrency/00_introduction/: pyproject.toml
exercises/03_concurrency/01_python_threads/: .wr.toml  pyproject.toml
exercises/03_concurrency/01_python_threads/src/mthreading/: __init__.py
exercises/03_concurrency/02_gil/: Cargo.toml  pyproject.toml
exercises/03_concurrency/02_gil/sample/: pyproject.toml
exercises/03_concurrency/02_gil/src/: lib.rs
exercises/03_concurrency/03_releasing_the_gil/: Cargo.toml  pyproject.toml
exercises/03_concurrency/03_releasing_the_gil/sample/: pyproject.toml
exercises/03_concurrency/03_releasing_the_gil/sample/tests/: test_sample.py
exercises/03_concurrency/03_releasing_the_gil/src/: lib.rs
exercises/03_concurrency/04_minimize_gil_locking/: Cargo.toml  pyproject.toml
exercises/03_concurrency/05_immutable_types/: Cargo.toml  pyproject.toml
exercises/03_concurrency/06_outro/: Cargo.toml  pyproject.toml
exercises/03_concurrency/06_outro/sample/: pyproject.toml
exercises/03_concurrency/06_outro/sample/tests/: test_sample.py
exercises/03_concurrency/06_outro/src/: lib.rs
patcher/: Cargo.toml
patcher/src/: main.rs
verifier/: Cargo.toml
verifier/src/: main.rs
(+25 files in other folders)
