[workspace]
members = ["exercises/*/*", "verifier"]
exclude = [
  "exercises/03_concurrency/00_introduction",
  "exercises/03_concurrency/01_python_threads",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
duct = "0.13"
primes = "0.4"
pyo3 = "0.26.0"
rayon = "1"
semver = "1.0.27"
serde = "1.0.228"
serde_json = "1.0.145"
