[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "outro2"
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
version = "0.1.0"

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.uv.config-settings]
# Faster feedback on Rust builds
build-args = "--profile=dev"

[tool.uv]
cache-keys = ["pyproject.toml", "Cargo.toml", "src/*.rs"]

[tool.uv.sources]
outro2 = { workspace = true }

[tool.uv.workspace]
members = ["sample"]
